fix: keep DB user as marketmind (no CREATE USER privilege)
- Reverted DB user from aegis back to marketmind in .env, .env.example, application.yml, docker-compose, create-database.sql
- MySQL user marketmind already exists with proper privileges

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>