@@ -8,6 +8,9 @@ import com.aegis.alpha.mapper.AgentCallSpanMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.util.AbstractMap.SimpleEntry;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -26,6 +29,19 @@ class AgentTraceServiceTest {
         service = new AgentTraceService(mapper, objectMapper);
     }
 
+    @SafeVarargs
+    private static <K, V> Map<K, V> mapOf(Map.Entry<K, V>... entries) {
+        Map<K, V> map = new HashMap<>();
+        for (Map.Entry<K, V> entry : entries) {
+            map.put(entry.getKey(), entry.getValue());
+        }
+        return map;
+    }
+
+    private static <K, V> Map.Entry<K, V> entry(K key, V value) {
+        return new SimpleEntry<>(key, value);
+    }
+
     @Test
     void recordNodeSpanSetsAgentType() {
         WorkflowRun run = new WorkflowRun();
@@ -40,8 +56,8 @@ class AgentTraceServiceTest {
         nodeRun.setCompletedAt("2026-01-01 10:00:05");
         nodeRun.setSortOrder(1);
 
-        Map<String, Object> input = Map.of("query", "analyze AAPL");
-        Map<String, Object> output = Map.of("ok", true, "model", "deepseek-v4-flash");
+        Map<String, Object> input = mapOf(entry("query", "analyze AAPL"));
+        Map<String, Object> output = mapOf(entry("ok", true), entry("model", "deepseek-v4-flash"));
 
         service.recordNodeSpan(run, nodeRun, "finance.stock_recommendation_aggregate", input, output);
 
@@ -69,7 +85,7 @@ class AgentTraceServiceTest {
         nodeRun.setCompletedAt("2026-01-01 10:00:03");
         nodeRun.setSortOrder(2);
 
-        service.recordNodeSpan(run, nodeRun, "hydrate_market_data", Map.of(), Map.of("ok", true));
+        service.recordNodeSpan(run, nodeRun, "hydrate_market_data", Collections.emptyMap(), mapOf(entry("ok", true)));
 
         verify(mapper).insert(argThat(span -> {
             assertThat(span.getSpanType()).isEqualTo("node");
@@ -90,9 +106,9 @@ class AgentTraceServiceTest {
         nodeRun.setCompletedAt("2026-01-01 10:00:01");
         nodeRun.setSortOrder(3);
 
-        Map<String, Object> output = Map.of("ok", false, "reason", "API error");
+        Map<String, Object> output = mapOf(entry("ok", false), entry("reason", "API error"));
 
-        service.recordNodeSpan(run, nodeRun, "handler", Map.of(), output);
+        service.recordNodeSpan(run, nodeRun, "handler", Collections.emptyMap(), output);
 
         verify(mapper).insert(argThat(span -> {
             assertThat(span.getStatus()).isEqualTo("ERROR");
@@ -114,18 +130,18 @@ class AgentTraceServiceTest {
         nodeRun.setCompletedAt("2026-01-01 10:00:05");
         nodeRun.setSortOrder(4);
 
-        Map<String, Object> output = Map.of(
-                "ok", true,
-                "data", Map.of(
-                        "usage", Map.of(
-                                "prompt_tokens", 200,
-                                "completion_tokens", 100,
-                                "total_tokens", 300
-                        )
-                )
+        Map<String, Object> output = mapOf(
+                entry("ok", true),
+                entry("data", mapOf(
+                        entry("usage", mapOf(
+                                entry("prompt_tokens", 200),
+                                entry("completion_tokens", 100),
+                                entry("total_tokens", 300)
+                        ))
+                ))
         );
 
-        service.recordNodeSpan(run, nodeRun, "handler", Map.of(), output);
+        service.recordNodeSpan(run, nodeRun, "handler", Collections.emptyMap(), output);
 
         verify(mapper).insert(argThat(span -> {
             assertThat(span.getPromptTokens()).isEqualTo(200);
@@ -148,7 +164,7 @@ class AgentTraceServiceTest {
         nodeRun.setCompletedAt(null);
         nodeRun.setSortOrder(5);
 
-        service.recordNodeSpan(run, nodeRun, "handler", Map.of(), Map.of("ok", true));
+        service.recordNodeSpan(run, nodeRun, "handler", Collections.emptyMap(), mapOf(entry("ok", true)));
 
         verify(mapper).insert(argThat(span -> {
             assertThat(span.getCompletedAt()).isNotNull();
