@@ -4,6 +4,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -14,7 +16,7 @@ class DifyServiceTest {
     @Test
     void runWorkflowReturnsStubWhenDisabled() {
         DifyService service = new DifyService(false, "https://api.dify.ai/v1", "key", "key");
-        Map<String, Object> result = service.runWorkflow("test-wf", Map.of(), "user1");
+        Map<String, Object> result = service.runWorkflow("test-wf", Collections.emptyMap(), "user1");
         assertThat(result.get("provider")).isEqualTo("local-stub");
         assertThat(result.get("status")).isEqualTo("queued");
         assertThat(result.get("workflow_key")).isEqualTo("test-wf");
@@ -23,7 +25,7 @@ class DifyServiceTest {
     @Test
     void runWorkflowReturnsStubWhenApiKeyMissing() {
         DifyService service = new DifyService(true, "https://api.dify.ai/v1", "", "chat-key");
-        Map<String, Object> result = service.runWorkflow("test-wf", Map.of(), "user1");
+        Map<String, Object> result = service.runWorkflow("test-wf", Collections.emptyMap(), "user1");
         assertThat(result.get("provider")).isEqualTo("local-stub");
         assertThat(result.get("status")).isEqualTo("queued");
     }
@@ -31,14 +33,16 @@ class DifyServiceTest {
     @Test
     void runWorkflowReturnsStubWhenApiKeyNull() {
         DifyService service = new DifyService(true, "https://api.dify.ai/v1", null, "chat-key");
-        Map<String, Object> result = service.runWorkflow("test-wf", Map.of(), "user1");
+        Map<String, Object> result = service.runWorkflow("test-wf", Collections.emptyMap(), "user1");
         assertThat(result.get("provider")).isEqualTo("local-stub");
     }
 
     @Test
     void runWorkflowPassesInputsWhenEnabledButNoKey() {
         DifyService service = new DifyService(true, "https://api.dify.ai/v1", "  ", "chat-key");
-        Map<String, Object> result = service.runWorkflow("test-wf", Map.of("ticker", "AAPL"), "user1");
+        Map<String, Object> inputs = new HashMap<>();
+        inputs.put("ticker", "AAPL");
+        Map<String, Object> result = service.runWorkflow("test-wf", inputs, "user1");
         assertThat(result.get("workflow_key")).isEqualTo("test-wf");
     }
 
